--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -60,7 +60,7 @@ add_test(NAME MathFunctionsTests COMMAND MathFunctionsTests 2.0)
 
 # ---- code coverage ----
 
-if(ENABLE_TEST_COVERAGE AND NOT MathFunctions_FOUND)
-  # target_compile_options(MathFunctions PUBLIC -O0 -g -fprofile-arcs -ftest-coverage)
-  # target_link_options(MathFunctions PUBLIC -fprofile-arcs -ftest-coverage)
-endif()
+# if(ENABLE_TEST_COVERAGE AND NOT MathFunctions_FOUND)
+#   target_compile_options(MathFunctions PUBLIC -O0 -g -fprofile-arcs -ftest-coverage)
+#   target_link_options(MathFunctions PUBLIC -fprofile-arcs -ftest-coverage)
+# endif()
