patch all genrated gcovr header
update cmake config file too

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,9 +95,8 @@ packageProject(
   INCLUDE_DESTINATION ${INCLUDE_INSTALL_DIR}
   VERSION_HEADER ${PROJECT_VERSION_HEADER}
   EXPORT_HEADER ${PROJECT_EXPORT_HEADER}
-  COMPATIBILITY SameMajorVersion
-  # XXX DISABLE_VERSION_SUFFIX NOT YET! CK
-  DISABLE_CHECK_REQUIRED_COMPONENTS YES
+  COMPATIBILITY SameMajorVersion # XXX DISABLE_VERSION_SUFFIX NOT YET! CK
+                DISABLE_CHECK_REQUIRED_COMPONENTS YES
 )
 
 # generate the export targets for the build tree. Note: The file created by this command is specific
