--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 3.14...3.20)
+cmake_minimum_required(VERSION 3.21...3.25)
 
 # ---- Project ----
 
 # Note: update this to your new project's name and version
 project(
   MathFunctions
-  VERSION 1.0.0
+  VERSION 1.0.1
   LANGUAGES CXX
 )
 
@@ -14,8 +14,7 @@ project(
 if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
   message(
     FATAL_ERROR
-      "In-source builds not allowed. Please make a new directory (called a build directory) \
-and run CMake from there."
+      "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there."
   )
 endif()
 
@@ -29,14 +28,9 @@ include(cmake/options.cmake)
 include(cmake/CPM.cmake)
 
 # PackageProject.cmake will be used to make our target installable
-CPMAddPackage(
-  NAME PackageProject.cmake
-  GITHUB_REPOSITORY ClausKlein/PackageProject.cmake
-  # VERSION CK1.6.0
-  GIT_TAG 4ac95860ba72bb0eb324c4d63e35fb59be3bd50d
-)
+CPMAddPackage("gh:TheLartians/PackageProject.cmake@1.10.0")
 
-set(COMPONENT_TARGETS_ENABLED NO) # Note: DO not set! CK
+# NO! set(COMPONENT_TARGETS_ENABLED NO) # Note: DO not set! CK
 set(PROJECT_NAMESPACE ${PROJECT_NAME})
 set(PROJECT_VERSION_INCLUDE_DIR ${PROJECT_BINARY_DIR}/PackageProjectInclude)
 include_directories(${PROJECT_VERSION_INCLUDE_DIR})
@@ -44,7 +38,7 @@ include_directories(${PROJECT_VERSION_INCLUDE_DIR})
 set(NAMESPACE_HEADER_LOCATION ${CMAKE_CURRENT_LIST_DIR}/include)
 set(INCLUDE_INSTALL_DIR include/${PROJECT_NAMESPACE}-${PROJECT_VERSION}) # XXX VERSION_SUFFIX
 string(TOLOWER ${PROJECT_NAMESPACE} PROJECT_HEADER_LOCATION)
-# TODO: needed to be lower case? CK
+# TODO: why needed to be lower case? CK
 
 # ---- Add components libraries here ----
 
@@ -74,7 +68,7 @@ set_target_properties(
 # header paths
 string(TOLOWER ${PROJECT_NAMESPACE}/version.h PROJECT_VERSION_HEADER)
 string(TOLOWER ${PROJECT_NAMESPACE}/${PROJECT_NAMESPACE}_export.h PROJECT_EXPORT_HEADER)
-# TODO: needed to be lower case? CK
+# TODO: why needed to be lower case? CK
 
 # Note: This needs to be done after all install(TARGETS ...) commands!
 # generate and install export targets file
@@ -95,14 +89,18 @@ packageProject(
   INCLUDE_DESTINATION ${INCLUDE_INSTALL_DIR}
   VERSION_HEADER ${PROJECT_VERSION_HEADER}
   EXPORT_HEADER ${PROJECT_EXPORT_HEADER}
-  COMPATIBILITY SameMajorVersion # XXX DISABLE_VERSION_SUFFIX NOT YET! CK
-                DISABLE_CHECK_REQUIRED_COMPONENTS YES
+  COMPATIBILITY SameMajorVersion
+  # XXX DISABLE_VERSION_SUFFIX NOT YET! CK
+  DISABLE_CHECK_REQUIRED_COMPONENTS YES
 )
 
-# generate the export targets for the build tree. Note: The file created by this command is specific
-# to the build tree and should never be installed!
-export(
-  EXPORT ${PROJECT_NAMESPACE}Targets
-  FILE ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAMESPACE}Targets.cmake
-  NAMESPACE ${PROJECT_NAMESPACE}::
-)
+# generate the export targets for the build tree.
+# if(COMPONENT_TARGETS_ENABLED)
+#   # Note: The file created by this command is specific to the build tree
+#   # and and must be created after packageProject()! CK
+#   export(
+#     EXPORT ${PROJECT_NAMESPACE}Targets
+#     FILE ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAMESPACE}Targets.cmake
+#     NAMESPACE ${PROJECT_NAMESPACE}::
+#   )
+# endif()
