Fix Ci build problems

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,6 +18,8 @@ include(../cmake/tools.cmake)
 
 include(../cmake/CPM.cmake)
 
+CPMAddPackage("gh:TheLartians/PackageProject.cmake@1.10.0")
+
 CPMAddPackage(
   NAME ut
   GITHUB_REPOSITORY boost-ext/ut
