--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -28,7 +28,7 @@ jobs:
           key: ${{ github.workflow }}-cpm-modules-${{ hashFiles('**/CMakeLists.txt', '**/*.cmake') }}
 
       - name: configure
-        run: cmake -S test -B build   # XXX -G "Visual Studio 16 2019" -T ClangCL
+        run: cmake -S test -B build -G "Visual Studio 17 2022"
 
       - name: build
         run: cmake --build build --config Debug -j4
