BOOST_UT_DISABLE_MODULE

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,6 +24,7 @@ CPMAddPackage(
   NAME ut
   GITHUB_REPOSITORY boost-ext/ut
   GIT_TAG v1.1.9
+  OPTIONS "BOOST_UT_DISABLE_MODULE ON"
 )
 
 if(TEST_INSTALLED_VERSION)
